{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 624,
  "lineage": "eecb452d-0512-317e-80b1-096f1717221e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0176fc5292ed82ae1",
            "association_id": "eipassoc-02c528ac08397f852",
            "domain": "vpc",
            "id": "eipalloc-0176fc5292ed82ae1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b5786f15045b276a",
            "private_dns": "ip-10-0-1-97.ec2.internal",
            "private_ip": "10.0.1.97",
            "public_dns": "ec2-35-169-174-49.compute-1.amazonaws.com",
            "public_ip": "35.169.174.49",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:internet-gateway/igw-0f971f5e00535fe2d",
            "id": "igw-0f971f5e00535fe2d",
            "owner_id": "533267181254",
            "tags": {
              "Name": "main-gw"
            },
            "tags_all": {
              "Name": "main-gw"
            },
            "vpc_id": "vpc-09d440e5e8efafbca"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "puzzlepassportlambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267181254:loadbalancer/app/my-alb/26d99456b32525eb",
            "arn_suffix": "app/my-alb/26d99456b32525eb",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-258473615.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267181254:loadbalancer/app/my-alb/26d99456b32525eb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-032596134c62f8009"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05bbf8c9706898368"
              },
              {
                "subnet_id": "subnet-093b8fb022fc63919"
              }
            ],
            "subnets": [
              "subnet-05bbf8c9706898368",
              "subnet-093b8fb022fc63919"
            ],
            "vpc_id": "vpc-09d440e5e8efafbca",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.publica",
            "aws_subnet.publicb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267181254:listener/app/my-alb/26d99456b32525eb/fc0061fc2e32e0e5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:533267181254:targetgroup/lambda-tg/87423c4551d6dda1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267181254:listener/app/my-alb/26d99456b32525eb/fc0061fc2e32e0e5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:533267181254:loadbalancer/app/my-alb/26d99456b32525eb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.puzzlepassportlambda",
            "aws_lb_target_group.lambda_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.publica",
            "aws_subnet.publicb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267181254:listener/app/my-alb/26d99456b32525eb/1e0bffdfb8500d9a",
            "certificate_arn": "arn:aws:acm:us-east-1:533267181254:certificate/5c8ffd71-5eef-4162-bde0-11a440e0fb10",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:533267181254:targetgroup/lambda-tg/87423c4551d6dda1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267181254:listener/app/my-alb/26d99456b32525eb/1e0bffdfb8500d9a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:533267181254:loadbalancer/app/my-alb/26d99456b32525eb",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.puzzlepassportlambda",
            "aws_lb_target_group.lambda_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.publica",
            "aws_subnet.publicb",
            "aws_vpc.main",
            "data.aws_acm_certificate.tossl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lambda_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267181254:targetgroup/lambda-tg/87423c4551d6dda1",
            "arn_suffix": "targetgroup/lambda-tg/87423c4551d6dda1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267181254:targetgroup/lambda-tg/87423c4551d6dda1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:533267181254:loadbalancer/app/my-alb/26d99456b32525eb"
            ],
            "name": "lambda-tg",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "lambda"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lambda_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267181254:targetgroup/lambda-tg/87423c4551d6dda1-20240706163053322000000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:533267181254:targetgroup/lambda-tg/87423c4551d6dda1",
            "target_id": "arn:aws:lambda:us-east-1:533267181254:function:pzzl-server-prod"
          },
          "dependencies": [
            "aws_iam_role.lambda_role",
            "aws_lambda_function.pzzl_lambda_function",
            "aws_lb_target_group.lambda_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0176fc5292ed82ae1",
            "association_id": "eipassoc-02c528ac08397f852",
            "connectivity_type": "public",
            "id": "nat-0c45db12b2a0c10be",
            "network_interface_id": "eni-0b5786f15045b276a",
            "private_ip": "10.0.1.97",
            "public_ip": "35.169.174.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05bbf8c9706898368"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.publica",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:route-table/rtb-050d337ec12ff5757",
            "id": "rtb-050d337ec12ff5757",
            "owner_id": "533267181254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c45db12b2a0c10be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d440e5e8efafbca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.publica",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:route-table/rtb-0ea6205d0eadb3d32",
            "id": "rtb-0ea6205d0eadb3d32",
            "owner_id": "533267181254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f971f5e00535fe2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publica-rt"
            },
            "tags_all": {
              "Name": "publica-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d440e5e8efafbca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:route-table/rtb-04bfff2493771d70d",
            "id": "rtb-04bfff2493771d70d",
            "owner_id": "533267181254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f971f5e00535fe2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publica-rt"
            },
            "tags_all": {
              "Name": "publica-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d440e5e8efafbca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e21fafd7ab64ca7f",
            "route_table_id": "rtb-050d337ec12ff5757",
            "subnet_id": "subnet-0f99402be6532f399"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.publica",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad889ed8d0d79fa4",
            "route_table_id": "rtb-0ea6205d0eadb3d32",
            "subnet_id": "subnet-05bbf8c9706898368"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publica",
            "aws_subnet.publica",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc932afdb37615e",
            "route_table_id": "rtb-04bfff2493771d70d",
            "subnet_id": "subnet-093b8fb022fc63919"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicb",
            "aws_subnet.publicb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:security-group/sg-032596134c62f8009",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032596134c62f8009",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240706162639616200000003",
            "name_prefix": "terraform-",
            "owner_id": "533267181254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d440e5e8efafbca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:subnet/subnet-0f99402be6532f399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f99402be6532f399",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267181254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-09d440e5e8efafbca"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:subnet/subnet-05bbf8c9706898368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bbf8c9706898368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267181254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publica-subnet"
            },
            "tags_all": {
              "Name": "publica-subnet"
            },
            "vpc_id": "vpc-09d440e5e8efafbca"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:subnet/subnet-093b8fb022fc63919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093b8fb022fc63919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267181254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicb-subnet"
            },
            "tags_all": {
              "Name": "publicb-subnet"
            },
            "vpc_id": "vpc-09d440e5e8efafbca"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:vpc/vpc-09d440e5e8efafbca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c1473d317c5afc1",
            "default_route_table_id": "rtb-05b962b3cffd32f98",
            "default_security_group_id": "sg-0a1c6547591c8b4c0",
            "dhcp_options_id": "dopt-04383b457cc38c6a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d440e5e8efafbca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b962b3cffd32f98",
            "owner_id": "533267181254",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267181254:vpc-endpoint/vpce-0431156abe8bc8ad2",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-0431156abe8bc8ad2",
            "owner_id": "533267181254",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04bfff2493771d70d",
              "rtb-050d337ec12ff5757",
              "rtb-05b962b3cffd32f98",
              "rtb-0ea6205d0eadb3d32"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09d440e5e8efafbca"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_route_tables.main_vpc_route_tables"
          ]
        }
      ]
    }
  ]
}